@@ -1,5 +1,11 @@
 2003-10-31  Ross Burton  <ross@burtonini.com>
 
+	* src/sj-metadata-musicbrainz.c:
+	Remove the magic buffer size and use a #define instead. Remove C++
+	comments. Return an error if the thread cannot be created.
+
+2003-10-31  Ross Burton  <ross@burtonini.com>
+
 	* src/sj-extractor.c:
 	Fix the error signal declaration.
 
